# pathfinding

./: .gitignore  CMakeLists.txt  README.md
include/: algorithminterface.hpp  board.hpp  boardrenderer.hpp  coordinates.hpp  node.hpp  path.hpp  square.hpp
include/astar/: astar.hpp  node.hpp
src/: board.cpp  boardrenderer.cpp  coordinates.cpp  main.cpp  node.cpp  path.cpp  square.cpp
src/astar/: astar.cpp  node.cpp
